--- a/colcon_ws/src/service/CMakeLists.txt
+++ b/colcon_ws/src/service/CMakeLists.txt
@@ -14,7 +14,10 @@ find_package(example_interfaces REQUIRED)
 add_executable(server src/server.cpp)
 ament_target_dependencies(server rclcpp example_interfaces)
 
-install(TARGETS server DESTINATION lib/${PROJECT_NAME})
+add_executable(client src/client.cpp)
+ament_target_dependencies(client rclcpp example_interfaces)
+
+install(TARGETS server client DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
