--- a/colcon_ws/src/interfaces/CMakeLists.txt
+++ b/colcon_ws/src/interfaces/CMakeLists.txt
@@ -11,6 +11,18 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
+# Message dependencies
+find_package(geometry_msgs REQUIRED)
+
+# Message library generator
+find_package(rosidl_default_generators REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+    "msg/Test.msg"
+    "srv/Test.srv"
+    DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
